crates/tick/src/snapshots/tick__clock__tests__debug_alive_system_clock.snap
---
source: crates/tick/src/clock.rs
expression: clock
---
Clock {
    kind: "system",
    timers: 0,
    alive: true,
    ..
}
