crates/tick/src/snapshots/tick__clock__tests__debug_alive_system_clock_relocated.snap
---
source: crates/tick/src/clock.rs
expression: clock
---
Clock {
    kind: "system",
    timers: 0,
    alive: false,
    affinity: Some(
        Affinity {
            processor_index: 1,
            memory_region_index: 0,
            processor_count: 2,
            memory_region_count: 1,
        },
    ),
    ..
}
