crates/tick/src/snapshots/tick__clock__tests__debug_clock_with_timers.snap
---
source: crates/tick/src/clock.rs
expression: clock
---
Clock {
    kind: "controlled",
    timers: 2,
    alive: true,
    affinity: None,
    ..
}
