crates/tick/src/snapshots/tick__clock__tests__debug_controlled_clock.snap
---
source: crates/tick/src/clock.rs
expression: clock
---
Clock {
    kind: "controlled",
    timers: 0,
    alive: true,
    ..
}
